--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "id": "a1112678",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "id": "898046a7",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "id": "793fd425",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "id": "735fe917",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "id": "1c637b33",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "id": "1fd16654",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "id": "80d1de67",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "id": "f337e34c",
    "metadata": {},
    "outputs": [
@@ -330,19 +330,19 @@
        " 9  Costa Rica  2024    Óctuple    NaN       NaN}"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# All sheets\n",
-    "homicides_sheets\n"
+    "homicides_sheets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "id": "3068858d",
    "metadata": {},
    "outputs": [
@@ -374,12 +374,12 @@
     }
    ],
    "source": [
-    "print(seizures_df.head())\n"
+    "print(seizures_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "id": "397170da",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "id": "29e6c4f1",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "id": "fd75ffa6",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "id": "91280e7d",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "id": "5c8d4e41",
    "metadata": {},
    "outputs": [
@@ -440,25 +440,26 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 3398 entries, 8 to 3405\n",
-      "Data columns (total 14 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
       " 0   país                 3398 non-null   object \n",
-      " 1   provincia            3398 non-null   object \n",
-      " 2   cantón               3398 non-null   object \n",
-      " 3   distrito             3398 non-null   object \n",
-      " 4   year                 3398 non-null   Int64  \n",
-      " 5   habitantes_país      3398 non-null   float64\n",
-      " 6   homicidios_país_año  3398 non-null   float64\n",
-      " 7   tasa_100mil_país     3398 non-null   float64\n",
-      " 8   cocaína_eventos      3398 non-null   float64\n",
-      " 9   cocaína_(kg)         3398 non-null   float64\n",
-      " 10  crack_eventos        3398 non-null   float64\n",
-      " 11  crack_(piedras)      3398 non-null   float64\n",
-      " 12  marihuana_eventos    3398 non-null   float64\n",
-      " 13  marihuana_(kg)       3398 non-null   float64\n",
-      "dtypes: Int64(1), float64(9), object(4)\n",
-      "memory usage: 401.5+ KB\n",
+      " 1   year                 3398 non-null   Int64  \n",
+      " 2   homicidios_país_año  3398 non-null   float64\n",
+      " 3   habitantes_país      3398 non-null   float64\n",
+      " 4   tasa_100mil_país     3398 non-null   float64\n",
+      " 5   País                 3398 non-null   object \n",
+      " 6   Provincia            3398 non-null   object \n",
+      " 7   Cantón               3398 non-null   object \n",
+      " 8   Distrito             3398 non-null   object \n",
+      " 9    Cocaína Eventos     3398 non-null   float64\n",
+      " 10  Cocaína (kg)         3398 non-null   float64\n",
+      " 11  Crack Eventos        3398 non-null   float64\n",
+      " 12  Crack (piedras)      3398 non-null   float64\n",
+      " 13  Marihuana Eventos    3398 non-null   float64\n",
+      " 14  Marihuana (kg)       3398 non-null   float64\n",
+      "dtypes: Int64(1), float64(9), object(5)\n",
+      "memory usage: 428.1+ KB\n",
       "None\n"
      ]
     }
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "id": "3ced22bd",
    "metadata": {},
    "outputs": [
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "id": "f49fd5ff",
    "metadata": {},
    "outputs": [
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "id": "1caf8104",
    "metadata": {},
    "outputs": [],
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "id": "2d07f2e6",
    "metadata": {},
    "outputs": [
@@ -611,7 +612,7 @@
       "✓ Summary saved to data/results/merged_summary-2018-2024.xlsx\n",
       "=== GENERAL DATAFRAME INFO ===\n",
       "Shape: 3398 rows × 14 cols\n",
-      "Memory Usage: 1.11 MB\n",
+      "Memory Usage: 1.08 MB\n",
       "Columns with NA: 0 / 14\n",
       "Duplicate Rows: 0 (0.0%)\n",
       "Numeric Columns: 10\n",
@@ -671,7 +672,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d2ab79cd-652a-4f36-a343-cba0cb063984",
+       "ref": "4a38fb85-b194-4d5c-a651-87a5f05f8a03",
        "rows": [
         [
          "13",
