--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "f49fd5ff",
    "metadata": {},
    "outputs": [
@@ -556,9 +556,7 @@
     "merged_df.columns = merged_df.columns.str.strip()\n",
     "\n",
     "#  put _ between words\n",
-    "merged_df.columns = [re.sub(r'\\s+', '_', col.lower()) for col in merged_df.columns]\n",
-    "\n",
-    "print(merged_df.info())"
+    "merged_df.columns = [re.sub(r'\\s+', '_', col.lower()) for col in merged_df.columns]\n"
    ]
   },
   {
@@ -1148,6 +1146,45 @@
     "# Display Column Stats (including dropdown options)\n",
     "print(\"\\n=== COLUMN-LEVEL STATISTICS ===\")\n",
     "display(column_stats)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "521b008f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3398 entries, 8 to 3405\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   país                 3398 non-null   object \n",
+      " 1   provincia            3398 non-null   object \n",
+      " 2   cantón               3398 non-null   object \n",
+      " 3   distrito             3398 non-null   object \n",
+      " 4   year                 3398 non-null   Int64  \n",
+      " 5   habitantes_país      3398 non-null   float64\n",
+      " 6   homicidios_país_año  3398 non-null   float64\n",
+      " 7   tasa_100mil_país     3398 non-null   float64\n",
+      " 8   cocaína_eventos      3398 non-null   float64\n",
+      " 9   cocaína_(kg)         3398 non-null   float64\n",
+      " 10  crack_eventos        3398 non-null   float64\n",
+      " 11  crack_(piedras)      3398 non-null   float64\n",
+      " 12  marihuana_eventos    3398 non-null   float64\n",
+      " 13  marihuana_(kg)       3398 non-null   float64\n",
+      "dtypes: Int64(1), float64(9), object(4)\n",
+      "memory usage: 401.5+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(merged_df.info())"
    ]
   }
  ],
