--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -586,7 +586,7 @@
    "id": "ba68aa90",
    "metadata": {},
    "source": [
-    "### Exploratory Data Analysis"
+    "### Data Analysis"
    ]
   },
   {
@@ -594,7 +594,7 @@
    "id": "b3719617",
    "metadata": {},
    "source": [
-    "##### Summary Stats"
+    "##### EDA - Summary Stats"
    ]
   },
   {
@@ -1185,6 +1185,14 @@
    ],
    "source": [
     "print(merged_df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4784b74",
+   "metadata": {},
+   "source": [
+    "#### Overview"
    ]
   },
   {
