--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -1946,7 +1946,7 @@
     "plt.show()\n",
     "\n",
     "# Print detailed geographic insights\n",
-    "print(\"\\n🏆 Geographic Champions (or Villains):\")\n",
+    "print(\"\\nGeographic Hotspots:\")\n",
     "print(\"\\nHighest Homicide Rates:\")\n",
     "for i, (_, row) in enumerate(top_homicide_provinces.head(5).iterrows()):\n",
     "    print(f\"  {i+1}. {row['provincia']}, {row['país']}: {row['tasa_100mil_país']:.1f} per 100k\")\n",
