--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 164,
    "id": "5e7e294e",
    "metadata": {},
    "outputs": [
@@ -1475,6 +1475,7 @@
       "Drug Seizure Peak Years:\n",
       "  Largest cocaine seizure: 2020 (47,106 kg)\n",
       "  Largest marijuana seizure: 2022 (24,937 kg)\n",
+      "  Largest crack seizure: 2023 (493,233 pieces)\n",
       "\n",
       "============================================================\n",
       "DRUG SEIZURE EVENTS\n",
@@ -1694,6 +1695,12 @@
     "    max_marijuana_value = yearly_trends.loc[max_marijuana_idx, 'marihuana_(kg)']\n",
     "    print(f\"  Largest marijuana seizure: {max_marijuana_year} ({max_marijuana_value:,.0f} kg)\")\n",
     "    \n",
+    "    max_crack_idx = yearly_trends['crack_(piedras)'].idxmax()\n",
+    "    max_crack_year = yearly_trends.loc[max_crack_idx, 'year']\n",
+    "    max_crack_value = yearly_trends.loc[max_crack_idx, 'crack_(piedras)']\n",
+    "    print(f\"  Largest crack seizure: {max_crack_year} ({max_crack_value:,.0f} pieces)\")\n",
+    "    \n",
+    "\n",
     "except Exception as e:\n",
     "    print(f\"  Error calculating drug seizure peaks: {e}\")\n",
     "\n",
