--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 165,
    "id": "5e7e294e",
    "metadata": {},
    "outputs": [
@@ -1505,36 +1505,7 @@
       "Drug Events Peak Years:\n",
       "  Most cocaine events: 2024 (15,833 events)\n",
       "  Most marijuana events: 2024 (113,139 events)\n",
-      "  Most crack events: 2024 (29,743 events)\n",
-      "\n",
-      "============================================================\n",
-      "CORRELATION ANALYSIS\n",
-      "============================================================\n",
-      "\n",
-      "Correlations (Homicide Rate vs Drug Metrics):\n",
-      "  Cocaine Seizures (kg): -0.611 (Moderate negative correlation)\n",
-      "  Marijuana Seizures (kg): 0.271 (Weak positive correlation)\n",
-      "  Cocaine Events: 0.845 (Strong positive correlation)\n",
-      "  Marijuana Events: 0.721 (Strong positive correlation)\n",
-      "  Crack Events: 0.859 (Strong positive correlation)\n",
-      "\n",
-      "============================================================\n",
-      "SUMMARY STATISTICS\n",
-      "============================================================\n",
-      "\n",
-      "Data Coverage:\n",
-      "  Years covered: 2018 - 2024\n",
-      "  Total years analyzed: 7\n",
-      "\n",
-      "Yearly Trends Summary:\n",
-      " Year  Total Homicides  Rate per 100k  Cocaine (kg)  Marijuana (kg)  Cocaine Events  Marijuana Events\n",
-      " 2018            585.0           11.7       26519.2          6089.6          9460.0           74712.0\n",
-      " 2019            564.0           11.2       31099.0         16665.1         10354.0           83206.0\n",
-      " 2020            570.0           11.2       47106.3         12453.1          8790.0           66842.0\n",
-      " 2021            588.0           11.4       44289.5         21539.6         10653.0           82289.0\n",
-      " 2022            654.0           12.5       24707.2         24936.8         11604.0           81134.0\n",
-      " 2023            905.0           17.2       21354.2         21625.5         12660.0           86545.0\n",
-      " 2024            880.0           16.6       27151.9         15956.7         15833.0          113139.0\n"
+      "  Most crack events: 2024 (29,743 events)\n"
      ]
     }
    ],
@@ -1767,7 +1738,60 @@
     "    \n",
     "except Exception as e:\n",
     "    print(f\"  Error calculating drug event peaks: {e}\")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e082daef",
+   "metadata": {},
+   "source": [
+    "#### Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "be3dd0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "CORRELATION ANALYSIS\n",
+      "============================================================\n",
+      "\n",
+      "Correlations (Homicide Rate vs Drug Metrics):\n",
+      "  Cocaine Seizures (kg): -0.611 (Moderate negative correlation)\n",
+      "  Marijuana Seizures (kg): 0.271 (Weak positive correlation)\n",
+      "  Cocaine Events: 0.845 (Strong positive correlation)\n",
+      "  Marijuana Events: 0.721 (Strong positive correlation)\n",
+      "  Crack Events: 0.859 (Strong positive correlation)\n",
+      "\n",
+      "============================================================\n",
+      "SUMMARY STATISTICS\n",
+      "============================================================\n",
+      "\n",
+      "Data Coverage:\n",
+      "  Years covered: 2018 - 2024\n",
+      "  Total years analyzed: 7\n",
+      "\n",
+      "Yearly Trends Summary:\n",
+      " Year  Total Homicides  Rate per 100k  Cocaine (kg)  Marijuana (kg)  Cocaine Events  Marijuana Events\n",
+      " 2018            585.0           11.7       26519.2          6089.6          9460.0           74712.0\n",
+      " 2019            564.0           11.2       31099.0         16665.1         10354.0           83206.0\n",
+      " 2020            570.0           11.2       47106.3         12453.1          8790.0           66842.0\n",
+      " 2021            588.0           11.4       44289.5         21539.6         10653.0           82289.0\n",
+      " 2022            654.0           12.5       24707.2         24936.8         11604.0           81134.0\n",
+      " 2023            905.0           17.2       21354.2         21625.5         12660.0           86545.0\n",
+      " 2024            880.0           16.6       27151.9         15956.7         15833.0          113139.0\n"
+     ]
+    }
+   ],
+   "source": [
     "# ============================================================================\n",
     "# CORRELATION ANALYSIS\n",
     "# ============================================================================\n",
