--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -5,7 +5,7 @@
    "id": "66c0df0e",
    "metadata": {},
    "source": [
-    "# **Costa Rica - Seizure and Homicide Data Analysis**\n",
+    "# **Costa Rica Data - Seizure and Homicide Analysis**\n",
     "#### InSight Crime - MAD Unit \n",
     "June, 2025\n",
     "\n",
