--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -2126,7 +2126,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "- Homicides are mostly related to population size, not drug seizures.\n",
+    "- (Obvious) Homicides are mostly related to population size, not drug seizures.\n",
     "\n",
     "- Drug seizures (events) often happen together but don’t strongly connect to homicides.\n",
     "\n",
