--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -2129,7 +2129,13 @@
     "\n",
     "- Drug seizures (events) often happen together but don’t strongly connect to homicides.\n",
     "\n",
-    "- The quantity of drugs seized (kg/piedras) has little impact on homicides or other drug seizures."
+    "- The quantity of drugs seized (kg/piedras) has little impact on homicides or other drug seizures.\n",
+    "\n",
+    "- Desirable: have homicide rates for provinces from 2018 or before, have previous data for seizures. \n",
+    "\n",
+    "What else can be done with the data at hand?\n",
+    "\n",
+    "spatial viz (seizures by prov), derived indicators: seizure efficiency by quant of drugs, intensity by pop (national/provincial/cantonal), uML: clustering to classify prov/cantons by seizures and events, if you want to estimate or explain homicide patterns then define a target variable (Y): Homicide counts or homicide rate (per 100,000 people) at the national, provincial or cantonal level, have other predictors soc, eco, gov etc"
    ]
   }
  ],
