--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "\tAvailable [here](https://github.com/FelipeVillota/costa-rica-presentation/tree/main/data/merged) \n",
     "\t\n",
-    "\tNotes: Dataframes were combined considering geographic disaggregation and time. Leaving us with country-level observations/indicators, by year, from 2018-2014. This is the starting point for the analysis\n"
+    "\tNotes: Dataframes were combined considering geographic disaggregation and time. Leaving us with country-level observations/indicators, by year, from 2018-2024. This is the starting point for the analysis\n"
    ]
   },
   {
@@ -2135,7 +2135,10 @@
     "\n",
     "What else can be done with the data at hand?\n",
     "\n",
-    "spatial viz (seizures by prov), derived indicators: seizure efficiency by quant of drugs, intensity by pop (national/provincial/cantonal), uML: clustering to classify prov/cantons by seizures and events, if you want to estimate or explain homicide patterns then define a target variable (Y): Homicide counts or homicide rate (per 100,000 people) at the national, provincial or cantonal level, have other predictors soc, eco, gov etc"
+    "spatial viz (seizures by prov), \n",
+    "derived indicators: seizure efficiency by quant of drugs, intensity by pop (national/provincial/cantonal),\n",
+    "uML: clustering to classify prov/cantons by seizures and events, \n",
+    "if you want to estimate or explain homicide patterns then define a target variable (Y): Homicide counts or homicide rate (per 100,000 people) at the national, provincial or cantonal level, have other predictors soc, eco, gov etc"
    ]
   }
  ],
